CS_SBOX_20150209_01/Metadata/unpackaged/objects/SBQQ__DiscountSchedule__c.object
<CustomObject>
    <customHelpPage>SBQQ__DiscountScheduleHelp</customHelpPage>
    <description>Volume discount schedule that applies automatic discounts based on quantity.</description>
    <fields>
        <fullName>Discount_Schedule_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Discount Schedule External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AggregationScope__c</fullName>
        <description>Indicates whether quote lines referencing this schedule should be aggregated within quote, group or not at all for the purposes of volume discount calculation.</description>
        <inlineHelpText>Specify how to aggregate quantities of quote lines for products using this schedule. By default quantity of each line (even for the same product) is considered independently.</inlineHelpText>
        <label>Aggregation Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__CrossOrders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether volume discount should be applied on combined quantities across prior orders.</description>
        <inlineHelpText>Check this box if you want to extend volume discounts on total volume owned by customer (ie: quantity quoted plus prior purchases)</inlineHelpText>
        <label>Cross Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CrossProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether volume discount calculations should aggregate quantities of all products using this schedule.</description>
        <inlineHelpText>Check to aggregare quantities of all products using this schedule for the purpose of volume discount calculation.</inlineHelpText>
        <label>Cross Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this Discount Schedule.</description>
        <inlineHelpText>Description for this Discount Schedule.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountUnit__c</fullName>
        <label>Discount Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludedPricebookIds__c</fullName>
        <description>Comma-seperated list of price book IDs for which this discount schedule should not apply.</description>
        <inlineHelpText>Enter a list of price book IDs separated by commas that should not be applied to this discount schedule.</inlineHelpText>
        <label>Excluded Pricebook IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceScale__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Decimal places for prices produced by this discount schedule.</description>
        <inlineHelpText>Decimal places for prices produced by this discount schedule.</inlineHelpText>
        <label>Price Scale</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that this discount schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Product that this discount schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this discount schedule</description>
        <inlineHelpText>Type of schedule which determines how discount is calculated. Click &quot;Help for this Page&quot; link in the upper, right corner for detailed description of available types and how they calculate the discount.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Range</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Slab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Discount Schedule</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>